Aplicacion de Trabajo 1.0 + Formateo Correcto de Documentos/Paginas

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,17 +8,21 @@
   <link rel="icon" type="image/png" href="/logo-autoknls.png">
   <link rel="stylesheet" href="/src/style.css">
 </head>
+
 <body>
   {{> header}}
-  
+
   <main>
-    <section class="hero" style="background: linear-gradient(135deg, #ff2c15 0%, #d60000 100%); color: white; padding: 4rem 0; text-align: center;">
+    <section class="hero"
+      style="background: linear-gradient(135deg, #ff2c15 0%, #d60000 100%); color: white; padding: 4rem 0; text-align: center;">
       <div class="container">
         <h1 style="font-size: 3rem; margin-bottom: 1rem;">Bienvenido a AutoKNLS</h1>
-        <p style="font-size: 1.25rem; margin-bottom: 2rem;">Tu socio confiable en repuestos y accesorios automotrices</p>
+        <p style="font-size: 1.25rem; margin-bottom: 2rem;">Tu socio confiable en repuestos y accesorios automotrices
+        </p>
         <div style="display: flex; gap: 1rem; justify-content: center; flex-wrap: wrap;">
           <a href="/repuestos.html" class="btn btn-outline" style="border-color: white; color: white;">Ver Repuestos</a>
-          <a href="/ubicaciones.html" class="btn btn-primary" style="background-color: white; color: #ff2c15;">Nuestras Ubicaciones</a>
+          <a href="/ubicaciones.html" class="btn btn-primary" style="background-color: white; color: #ff2c15;">Nuestras
+            Ubicaciones</a>
         </div>
       </div>
     </section>
@@ -44,7 +49,8 @@
   </main>
 
   {{> footer}}
-  
+
   <script type="module" src="/src/main.js"></script>
 </body>
+
 </html>
