--- a/compromiso.html
+++ b/compromiso.html
@@ -12,39 +12,7 @@
 <body>
     {{> header}}
 
-    <main>
-        <section style="padding: 4rem 0;">
-            <div class="container">
-                <h1 style="font-size: 2.5rem; margin-bottom: 2rem; text-align: center;">Nuestro Compromiso</h1>
-                <div style="max-width: 960px; margin: 0 auto; display: grid; gap: 1.5rem;">
-                    <div
-                        style="padding: 1.75rem; background: #f5f5f5; border-left: 4px solid #ff2c15; border-radius: 6px; box-shadow: 0 2px 8px rgba(0,0,0,0.08);">
-                        <h3 style="margin-bottom: 0.75rem;">Calidad Garantizada</h3>
-                        <p style="line-height: 1.7; color: #434343;">Solo trabajamos con marcas y proveedores
-                            certificados para asegurar desempeño y durabilidad.</p>
-                    </div>
-                    <div
-                        style="padding: 1.75rem; background: #f5f5f5; border-left: 4px solid #ff2c15; border-radius: 6px; box-shadow: 0 2px 8px rgba(0,0,0,0.08);">
-                        <h3 style="margin-bottom: 0.75rem;">Disponibilidad</h3>
-                        <p style="line-height: 1.7; color: #434343;">Bodegas con productos nuevos y alternativas
-                            compatibles para que encuentres lo que necesitas sin esperar.</p>
-                    </div>
-                    <div
-                        style="padding: 1.75rem; background: #f5f5f5; border-left: 4px solid #ff2c15; border-radius: 6px; box-shadow: 0 2px 8px rgba(0,0,0,0.08);">
-                        <h3 style="margin-bottom: 0.75rem;">Asesoría Experta</h3>
-                        <p style="line-height: 1.7; color: #434343;">Equipo especializado para guiarte en repuestos y
-                            accesorios según tu vehículo y tu presupuesto.</p>
-                    </div>
-                    <div
-                        style="padding: 1.75rem; background: #f5f5f5; border-left: 4px solid #ff2c15; border-radius: 6px; box-shadow: 0 2px 8px rgba(0,0,0,0.08);">
-                        <h3 style="margin-bottom: 0.75rem;">Servicio Ágil</h3>
-                        <p style="line-height: 1.7; color: #434343;">Procesos claros, tiempos de respuesta cortos y
-                            comunicación transparente en cada pedido.</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-    </main>
+    {{> compromiso-main}}
 
     {{> footer}}
 
