--- a/promociones.html
+++ b/promociones.html
@@ -6,26 +6,64 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Promociones - AutoKNLS</title>
     <link rel="icon" type="image/png" href="/logo-autoknls.png">
-    <link rel="stylesheet" href="/src/style.css">
+    <link rel="stylesheet" href="/src/style.css"> 
 </head>
 
 <body>
     {{> header}}
 
     <main>
-        <section style="padding: 4rem 0;">
+        <section class="promociones-hero">
             <div class="container">
-                <h1 style="font-size: 2.5rem; margin-bottom: 2rem; text-align: center;">Promociones Especiales</h1>
-                <p style="text-align: center; font-size: 1.125rem; margin-bottom: 3rem; color: #555555;">Aprovecha
-                    nuestras ofertas exclusivas</p>
+                <h1 class="page-title">Ofertas Exclusivas de Repuestos AutoKNLS</h1>
+                <p class="page-subtitle">Aprovecha nuestras ofertas exclusivas en las piezas más necesarias para tu vehículo.</p>
+            </div>
+        </section>
 
-                <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 2rem;">
-                    <div style="border: 2px solid #ff2c15; padding: 2rem; border-radius: 8px; position: relative;">
-                        <span
-                            style="position: absolute; top: -15px; left: 20px; background: #ff2c15; color: white; padding: 0.5rem 1rem; border-radius: 4px; font-weight: bold;">¡OFERTA!</span>
-                        <h3 style="margin-bottom: 1rem; margin-top: 1rem;">Próximamente</h3>
-                        <p>Estamos preparando increíbles ofertas para ti. ¡Mantente al tanto!</p>
-                    </div>
+        <section class="promociones-list">
+            <div class="container">
+                
+                <div class="promo-grid">
+                    
+                    <article class="promo-card">
+                        <div class="promo-img-container">
+                            <img src="/img/promo_frenos.jpg" alt="Kit de Frenos en Promoción">
+                        </div>
+                        <div class="promo-content">
+                            <span class="discount-tag">30% OFF</span>
+                            <h3 class="promo-title">Kit Completo de Frenos Deportivos</h3>
+                            <p class="promo-description">Mejora la seguridad y rendimiento. Incluye discos ventilados y pastillas cerámicas. ¡Venta rápida!</p>
+                            <p class="promo-price">Precio Regular: $150.00 | **Ahora: $105.00**</p>
+                            <a href="/repuestos.html?id=frenos30" class="cta-button">¡Comprar Ahora!</a>
+                        </div>
+                    </article>
+
+                    <article class="promo-card">
+                        <div class="promo-img-container">
+                            <img src="/img/promo_aceite.jpg" alt="Aceite y Filtros en Promoción">
+                        </div>
+                        <div class="promo-content">
+                            <span class="discount-tag">2x1 en Filtros</span>
+                            <h3 class="promo-title">Súper Promo de Mantenimiento Básico</h3>
+                            <p class="promo-description">Compra un aceite sintético de galón y llévate dos filtros de aceite al precio de uno.</p>
+                            <p class="promo-price">Válido hasta agotar existencias.</p>
+                            <a href="/accesorios.html?id=filtro2x1" class="cta-button">Ver Detalles</a>
+                        </div>
+                    </article>
+
+                    <article class="promo-card">
+                        <div class="promo-img-container">
+                            <img src="/img/promo_bateria.jpg" alt="Baterías en Promoción">
+                        </div>
+                        <div class="promo-content">
+                            <span class="discount-tag is-secondary">ENVÍO GRATIS</span>
+                            <h3 class="promo-title">Baterías de Alto Rendimiento</h3>
+                            <p class="promo-description">Todas las baterías de la marca "PowerMax" con envío a domicilio sin costo adicional este mes.</p>
+                            <p class="promo-price">¡No te quedes sin energía!</p>
+                            <a href="/repuestos.html?id=bateriasenvio" class="cta-button">Comprar Batería</a>
+                        </div>
+                    </article>
+
                 </div>
             </div>
         </section>
