--- a/blog.html
+++ b/blog.html
@@ -5,117 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Blog - AutoKNLS</title>
   <link rel="icon" type="image/png" href="/logo-autoknls.png">
-  <link rel="stylesheet" href="/src/style.css">
 </head>
 <body>
   {{> header}}
   
-  <main>
-    <section style="padding: 4rem 0; background: linear-gradient(135deg, #f8f9fa 0%, #ffffff 100%);">
-      <div class="container">
-        <div style="text-align: center; margin-bottom: 4rem;">
-          <h1 style="font-size: 2.5rem; margin-bottom: 1rem; color: #1a1a1a;">Blog AutoKNLS</h1>
-          <p style="font-size: 1.125rem; color: #555555; max-width: 600px; margin: 0 auto;">Consejos, guías y novedades del mundo automotriz para mantener tu vehículo en perfecto estado</p>
-        </div>
-        
-        <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(320px, 1fr)); gap: 2rem; margin-bottom: 3rem;">
-          <!-- Artículo destacado -->
-          <article style="background: #ffffff; padding: 2rem; border-radius: 12px; box-shadow: 0 4px 16px rgba(0,0,0,0.1); border-top: 4px solid #ff2c15; grid-column: span 2; transition: transform 0.3s ease, box-shadow 0.3s ease;" onmouseover="this.style.transform='translateY(-4px)'; this.style.boxShadow='0 8px 24px rgba(0,0,0,0.15)'" onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 4px 16px rgba(0,0,0,0.1)'">
-            <div style="display: flex; gap: 0.75rem; margin-bottom: 1rem; flex-wrap: wrap;">
-              <span style="background: #ff2c15; color: white; padding: 0.4rem 1rem; border-radius: 20px; font-size: 0.875rem; font-weight: 600;">⭐ Destacado</span>
-              <span style="background: #f0f0f0; color: #ff2c15; padding: 0.4rem 1rem; border-radius: 20px; font-size: 0.875rem; font-weight: 600;">Mantenimiento</span>
-            </div>
-            <h3 style="margin-bottom: 1rem; font-size: 1.75rem; color: #1a1a1a; line-height: 1.3;">10 Consejos Esenciales para el Mantenimiento Preventivo de tu Vehículo</h3>
-            <p style="color: #555555; line-height: 1.7; margin-bottom: 1.5rem; font-size: 1rem;">Aprende las prácticas fundamentales para mantener tu automóvil en óptimas condiciones y evitar reparaciones costosas. Desde el cambio de aceite hasta la revisión de neumáticos, te guiamos paso a paso.</p>
-            <div style="display: flex; justify-content: space-between; align-items: center;">
-              <small style="color: #7b7b7b; font-size: 0.875rem;">📅 Publicado: 15 de Enero, 2024</small>
-              <a href="#" style="color: #ff2c15; font-weight: 600; text-decoration: none; font-size: 0.9rem;">Leer más →</a>
-            </div>
-          </article>
-
-          <!-- Artículo 2 -->
-          <article style="background: #ffffff; padding: 2rem; border-radius: 12px; box-shadow: 0 4px 16px rgba(0,0,0,0.1); transition: transform 0.3s ease, box-shadow 0.3s ease;" onmouseover="this.style.transform='translateY(-4px)'; this.style.boxShadow='0 8px 24px rgba(0,0,0,0.15)'" onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 4px 16px rgba(0,0,0,0.1)'">
-            <div style="display: flex; gap: 0.75rem; margin-bottom: 1rem; flex-wrap: wrap;">
-              <span style="background: #e8f4f8; color: #0066cc; padding: 0.4rem 1rem; border-radius: 20px; font-size: 0.875rem; font-weight: 600;">Reparaciones</span>
-            </div>
-            <h3 style="margin-bottom: 1rem; font-size: 1.5rem; color: #1a1a1a; line-height: 1.3;">Cómo Identificar Problemas en el Sistema de Frenos</h3>
-            <p style="color: #555555; line-height: 1.7; margin-bottom: 1.5rem; font-size: 0.95rem;">Señales de alerta que no debes ignorar. Conoce los síntomas más comunes de problemas en los frenos y cuándo es momento de acudir al taller.</p>
-            <div style="display: flex; justify-content: space-between; align-items: center;">
-              <small style="color: #7b7b7b; font-size: 0.875rem;">📅 Publicado: 10 de Enero, 2024</small>
-              <a href="#" style="color: #ff2c15; font-weight: 600; text-decoration: none; font-size: 0.9rem;">Leer más →</a>
-            </div>
-          </article>
-
-          <!-- Artículo 3 -->
-          <article style="background: #ffffff; padding: 2rem; border-radius: 12px; box-shadow: 0 4px 16px rgba(0,0,0,0.1); transition: transform 0.3s ease, box-shadow 0.3s ease;" onmouseover="this.style.transform='translateY(-4px)'; this.style.boxShadow='0 8px 24px rgba(0,0,0,0.15)'" onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 4px 16px rgba(0,0,0,0.1)'">
-            <div style="display: flex; gap: 0.75rem; margin-bottom: 1rem; flex-wrap: wrap;">
-              <span style="background: #fff4e6; color: #cc6600; padding: 0.4rem 1rem; border-radius: 20px; font-size: 0.875rem; font-weight: 600;">Accesorios</span>
-            </div>
-            <h3 style="margin-bottom: 1rem; font-size: 1.5rem; color: #1a1a1a; line-height: 1.3;">Los Mejores Accesorios para Mejorar la Seguridad de tu Auto</h3>
-            <p style="color: #555555; line-height: 1.7; margin-bottom: 1.5rem; font-size: 0.95rem;">Descubre los accesorios esenciales que pueden marcar la diferencia en tu seguridad y la de tus pasajeros durante cada viaje.</p>
-            <div style="display: flex; justify-content: space-between; align-items: center;">
-              <small style="color: #7b7b7b; font-size: 0.875rem;">📅 Publicado: 5 de Enero, 2024</small>
-              <a href="#" style="color: #ff2c15; font-weight: 600; text-decoration: none; font-size: 0.9rem;">Leer más →</a>
-            </div>
-          </article>
-
-          <!-- Artículo 4 -->
-          <article style="background: #ffffff; padding: 2rem; border-radius: 12px; box-shadow: 0 4px 16px rgba(0,0,0,0.1); transition: transform 0.3s ease, box-shadow 0.3s ease;" onmouseover="this.style.transform='translateY(-4px)'; this.style.boxShadow='0 8px 24px rgba(0,0,0,0.15)'" onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 4px 16px rgba(0,0,0,0.1)'">
-            <div style="display: flex; gap: 0.75rem; margin-bottom: 1rem; flex-wrap: wrap;">
-              <span style="background: #f0f0f0; color: #ff2c15; padding: 0.4rem 1rem; border-radius: 20px; font-size: 0.875rem; font-weight: 600;">Consejos</span>
-            </div>
-            <h3 style="margin-bottom: 1rem; font-size: 1.5rem; color: #1a1a1a; line-height: 1.3;">Guía Completa: Cómo Elegir el Aceite Correcto para tu Motor</h3>
-            <p style="color: #555555; line-height: 1.7; margin-bottom: 1.5rem; font-size: 0.95rem;">Todo lo que necesitas saber sobre viscosidad, tipos de aceite y cuándo realizar el cambio. Protege el corazón de tu vehículo.</p>
-            <div style="display: flex; justify-content: space-between; align-items: center;">
-              <small style="color: #7b7b7b; font-size: 0.875rem;">📅 Publicado: 28 de Diciembre, 2023</small>
-              <a href="#" style="color: #ff2c15; font-weight: 600; text-decoration: none; font-size: 0.9rem;">Leer más →</a>
-            </div>
-          </article>
-
-          <!-- Artículo 5 -->
-          <article style="background: #ffffff; padding: 2rem; border-radius: 12px; box-shadow: 0 4px 16px rgba(0,0,0,0.1); transition: transform 0.3s ease, box-shadow 0.3s ease;" onmouseover="this.style.transform='translateY(-4px)'; this.style.boxShadow='0 8px 24px rgba(0,0,0,0.15)'" onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 4px 16px rgba(0,0,0,0.1)'">
-            <div style="display: flex; gap: 0.75rem; margin-bottom: 1rem; flex-wrap: wrap;">
-              <span style="background: #e8f5e9; color: #2e7d32; padding: 0.4rem 1rem; border-radius: 20px; font-size: 0.875rem; font-weight: 600;">Eco-Friendly</span>
-            </div>
-            <h3 style="margin-bottom: 1rem; font-size: 1.5rem; color: #1a1a1a; line-height: 1.3;">Conducción Eficiente: Ahorra Combustible y Cuida el Medio Ambiente</h3>
-            <p style="color: #555555; line-height: 1.7; margin-bottom: 1.5rem; font-size: 0.95rem;">Técnicas de conducción que te ayudarán a reducir el consumo de combustible y tu huella de carbono sin sacrificar rendimiento.</p>
-            <div style="display: flex; justify-content: space-between; align-items: center;">
-              <small style="color: #7b7b7b; font-size: 0.875rem;">📅 Publicado: 20 de Diciembre, 2023</small>
-              <a href="#" style="color: #ff2c15; font-weight: 600; text-decoration: none; font-size: 0.9rem;">Leer más →</a>
-            </div>
-          </article>
-
-          <!-- Artículo 6 -->
-          <article style="background: #ffffff; padding: 2rem; border-radius: 12px; box-shadow: 0 4px 16px rgba(0,0,0,0.1); transition: transform 0.3s ease, box-shadow 0.3s ease;" onmouseover="this.style.transform='translateY(-4px)'; this.style.boxShadow='0 8px 24px rgba(0,0,0,0.15)'" onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 4px 16px rgba(0,0,0,0.1)'">
-            <div style="display: flex; gap: 0.75rem; margin-bottom: 1rem; flex-wrap: wrap;">
-              <span style="background: #f3e5f5; color: #7b1fa2; padding: 0.4rem 1rem; border-radius: 20px; font-size: 0.875rem; font-weight: 600;">Tecnología</span>
-            </div>
-            <h3 style="margin-bottom: 1rem; font-size: 1.5rem; color: #1a1a1a; line-height: 1.3;">Sistemas de Seguridad Modernos: ¿Qué Tiene tu Vehículo?</h3>
-            <p style="color: #555555; line-height: 1.7; margin-bottom: 1.5rem; font-size: 0.95rem;">Exploramos las tecnologías de seguridad más avanzadas disponibles en los vehículos actuales y cómo funcionan para protegerte.</p>
-            <div style="display: flex; justify-content: space-between; align-items: center;">
-              <small style="color: #7b7b7b; font-size: 0.875rem;">📅 Publicado: 15 de Diciembre, 2023</small>
-              <a href="#" style="color: #ff2c15; font-weight: 600; text-decoration: none; font-size: 0.9rem;">Leer más →</a>
-            </div>
-          </article>
-        </div>
-
-        <!-- Sección de categorías -->
-        <div style="margin-top: 4rem; padding: 2rem; background: #ffffff; border-radius: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.08);">
-          <h2 style="text-align: center; font-size: 1.75rem; margin-bottom: 2rem; color: #1a1a1a;">Explora por Categorías</h2>
-          <div style="display: flex; gap: 1rem; justify-content: center; flex-wrap: wrap;">
-            <a href="#" style="background: #ff2c15; color: white; padding: 0.75rem 1.5rem; border-radius: 25px; text-decoration: none; font-weight: 600; transition: all 0.3s ease;" onmouseover="this.style.background='#d60000'; this.style.transform='scale(1.05)'" onmouseout="this.style.background='#ff2c15'; this.style.transform='scale(1)'">Mantenimiento</a>
-            <a href="#" style="background: #f0f0f0; color: #1a1a1a; padding: 0.75rem 1.5rem; border-radius: 25px; text-decoration: none; font-weight: 600; transition: all 0.3s ease;" onmouseover="this.style.background='#e0e0e0'; this.style.transform='scale(1.05)'" onmouseout="this.style.background='#f0f0f0'; this.style.transform='scale(1)'">Reparaciones</a>
-            <a href="#" style="background: #f0f0f0; color: #1a1a1a; padding: 0.75rem 1.5rem; border-radius: 25px; text-decoration: none; font-weight: 600; transition: all 0.3s ease;" onmouseover="this.style.background='#e0e0e0'; this.style.transform='scale(1.05)'" onmouseout="this.style.background='#f0f0f0'; this.style.transform='scale(1)'">Accesorios</a>
-            <a href="#" style="background: #f0f0f0; color: #1a1a1a; padding: 0.75rem 1.5rem; border-radius: 25px; text-decoration: none; font-weight: 600; transition: all 0.3s ease;" onmouseover="this.style.background='#e0e0e0'; this.style.transform='scale(1.05)'" onmouseout="this.style.background='#f0f0f0'; this.style.transform='scale(1)'">Consejos</a>
-            <a href="#" style="background: #f0f0f0; color: #1a1a1a; padding: 0.75rem 1.5rem; border-radius: 25px; text-decoration: none; font-weight: 600; transition: all 0.3s ease;" onmouseover="this.style.background='#e0e0e0'; this.style.transform='scale(1.05)'" onmouseout="this.style.background='#f0f0f0'; this.style.transform='scale(1)'">Tecnología</a>
-          </div>
-        </div>
-      </div>
-    </section>
-  </main>
+  {{> blog}}
 
   {{> footer}}
-  
+
   <script type="module" src="/src/main.js"></script>
 </body>
+
 </html>
