--- a/compromiso.html
+++ b/compromiso.html
@@ -6,13 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nuestro Compromiso - AutoKNLS</title>
     <link rel="icon" type="image/png" href="/logo-autoknls.png">
-    <link rel="stylesheet" href="/src/style.css">
 </head>
 
 <body>
     {{> header}}
 
-    {{> compromiso-main}}
+    {{> compromiso}}
 
     {{> footer}}
 
