--- a/faq.html
+++ b/faq.html
@@ -12,48 +12,11 @@
 <body>
   {{> header}}
 
-  <main>
-    <section class="faq">
-      <div class="container">
-        <h1 class="faq__title">Preguntas Frecuentes</h1>
-        <p class="faq__subtitle">Aquí respondemos las dudas más comunes sobre nuestros productos y servicios, para que siempre te sientas acompañado.</p>
-
-        <div class="faq__list">
-          <details class="faq__item">
-            <summary class="faq__question">¿Cuál es nuestro horario de atención?</summary>
-            <ul class="faq__answer">
-              <li>Lunes a Viernes: 8:00 - 18:00</li>
-              <li>Sábados: 8:00 - 14:00</li>
-              <li>Domingos: Cerrado</li>
-            </ul>
-          </details>
-
-          <details class="faq__item">
-            <summary class="faq__question">¿Hacen envíos a domicilio?</summary>
-            <p class="faq__answer">Sí, enviamos productos a todo el país. Consulta con nosotros los costos y tiempos según tu ubicación.</p>
-          </details>
-
-          <details class="faq__item">
-            <summary class="faq__question">¿Los repuestos cuentan con garantía?</summary>
-            <p class="faq__answer">Todos nuestros repuestos son originales o certificados y cuentan con la garantía del fabricante. Pregunta en tienda para más detalles.</p>
-          </details>
-
-          <details class="faq__item">
-            <summary class="faq__question">¿Aceptan devoluciones?</summary>
-            <p class="faq__answer">Sí, aceptamos devoluciones dentro de 7 días si el producto no ha sido usado. Consulta nuestras políticas en tienda o con nuestro equipo.</p>
-          </details>
-
-          <details class="faq__item">
-            <summary class="faq__question">¿Cómo saber si un repuesto es compatible con mi vehículo?</summary>
-            <p class="faq__answer">Proporciona la marca, modelo y año de tu vehículo, y nuestro equipo de asesores confirmará la compatibilidad.</p>
-          </details>
-        </div>
-      </div>
-    </section>
-  </main>
+  {{> faq}}
 
   {{> footer}}
-  
+
   <script type="module" src="/src/main.js"></script>
 </body>
+
 </html>
