--- a/nosotros.html
+++ b/nosotros.html
@@ -4,59 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Conócenos - AutoKNLS</title>
-    <link rel="icon" type="image/png" href="/logo-autoknls.png">
-</head>
-
-<body>
+  <title>Conócenos - AutoKNLS</title>
+  <link rel="icon" type="image/png" href="/logo-autoknls.png">
+</head><body>
     {{> header}}
 
-    <main>
-        <section class="nosotros">
-            <div class="container">
-                <h1 class="nosotros__title">Conócenos</h1>
-                <p class="nosotros__subtitle">Descubre nuestra esencia y lo que nos mueve cada día</p>
-
-                <div class="nosotros__content">
-                    <div class="nosotros__about">
-                        <h2>Quiénes Somos</h2>
-                        <p>
-                            En AutoKNLS, nos dedicamos a conectar a cada conductor con repuestos y accesorios automotrices de la más alta calidad. Desde nuestros inicios, hemos trabajado para brindar soluciones confiables y un servicio cercano que haga sentir a nuestros clientes respaldados en cada paso.
-                        </p>
-                        <p>
-                            Nuestro equipo de profesionales y nuestra amplia red de sucursales nos permite acompañarte siempre, asegurando que cada necesidad automotriz encuentre la respuesta ideal.
-                        </p>
-                    </div>
-
-                    <div class="nosotros__mission-vision">
-                        <div class="nosotros__card">
-                            <h3>Misión</h3>
-                            <p>
-                                Brindar repuestos y accesorios de alta calidad, acompañados de un servicio ágil y asesoría experta, para que cada vehículo reciba el cuidado que merece.
-                            </p>
-                        </div>
-                        <div class="nosotros__card">
-                            <h3>Visión</h3>
-                            <p>
-                                Ser la red de distribución automotriz más confiable y cercana, reconocida por nuestra calidad, disponibilidad y compromiso constante con la satisfacción de quienes confían en nosotros.
-                            </p>
-                        </div>
-                    </div>
-
-                    <div class="nosotros__values">
-                        <h3>Nuestros Valores</h3>
-                        <div class="nosotros__values-list">
-                            <span>Calidad</span>
-                            <span>Confianza</span>
-                            <span>Servicio</span>
-                            <span>Innovación</span>
-                            <span>Compromiso</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-    </main>
+    {{> nosotros}}
 
     {{> footer}}
 
