--- a/ubicaciones.html
+++ b/ubicaciones.html
@@ -6,17 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ubicaciones - AutoKNLS</title>
     <link rel="icon" type="image/png" href="/logo-autoknls.png">
-    <link rel="stylesheet" href="/src/style.css">
 </head>
 
 <body>
-    {{> header}}
+  {{> header}}
 
-    {{>ubicaciones}}
+  {{> ubicaciones}}
 
-    {{> footer}}
-
-    <script type="module" src="/src/main.js"></script>
+  {{> footer}}    <script type="module" src="/src/main.js"></script>
 </body>
 
 </html>
